--- a/foundations/06-cascade-fix/style.css
+++ b/foundations/06-cascade-fix/style.css
@@ -1,9 +1,8 @@
-.para,
-.small-para {
+.para {
   color: hsl(0, 100%, 50%);
 }
 
-.small-para {
+.para.small {
   font-size: 14px;
 }
 
@@ -15,9 +14,10 @@
   background: green;
   color: white;
   font-weight: bold;
+  font-size: 20px;
 } 
 
-.button {
+.cancel {
   background-color: rgb(255, 255, 255);
   color: rgb(0, 0, 0);
   font-size: 20px;
@@ -28,7 +28,7 @@
   font-size: 14px;
 }
 
-div.text {
+.text {
   color: green;
   font-size: 22px;
 }
